name:                quake32017
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
extra-source-files:  ChangeLog.md, README.org
cabal-version:       >=1.10

executable quake32017
  main-is:             Main.hs
  other-modules:       Quake3.Shader.Parser
                       Quake3.Shader.TypeCheck
                       Quake3.BSP
                       GL.BindlessTextures
                       GL.Debug
                       GL.IndirectDrawing
                       GL.Shader
                       GL.ShaderStorageBufferObject
                       GL.TextureObject
                       GL.VertexArrayObject
                       Quake3.GL.Map
                       Quake3.GL.Material
                       Quake3.Logic
                       Quake3.Shader.ShaderRepository
                       Stopwatch
                       TextureManager
  build-depends:       base >=4.9 && <4.10
                     , JuicyPixels >=3.2 && <3.3
                     , exceptions >=0.8 && <0.9
                     , managed >=1.0 && <1.1
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , StateVar >=1.1 && <1.2
                     , text >=1.2 && <1.3
                     , vector >=0.11 && <0.12
                     , gl >=0.8 && <0.9
                     , linear >=1.20 && <1.21
                     , sdl2 >=2.2 && <2.3
                     , directory >=1.3 && <1.4
                     , filepath >=1.4 && <1.5
                     , megaparsec >=5.2 && <5.3
                     , lens
                     , c-storable-deriving
                     , either
                     , generic-deriving
                     , clock
                     , reactive-banana
  default-language:    Haskell2010
